--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,39 +6,12 @@ on:
       - '1.1v'
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-    -
-      name: Checkout code
-      uses: actions/checkout@v4
-    -
-      name: Serve Files
-      uses: Eun/http-server-action@v1
-      with:
-        directory: ${{ github.workspace }}
-        port: 8080
-        no-cache: false
-        index-files: |
-          ["index.html", "index.htm"]
-        allowed-methods: |
-          ["GET", "HEAD"]
-        content-types: |
-          {
-            "appcache": "text/cache-manifest",
-            "css": "text/css",
-            "gif": "image/gif",
-            "html": "text/html",
-            "ico": "image/x-icon",
-            "jpeg": "image/jpeg",
-            "jpg": "image/jpeg",
-            "js": "text/javascript",
-            "json": "application/json",
-            "png": "image/png",
-            "txt": "text/plain",
-            "xml": "text/xml"
-          }
-        log: "log.txt"
-        logTime: "false"
-    -
-      run: |
-        curl -vvvv http://localhost:8080/index.html
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-python@v4
+          with:
+            python-version: '3.x'
+        - uses: jannekem/run-python-script-action@v1
+        - run: cd RELEASE && server.py
